player: on_capabilities_changed not emitted on stop
Player capabilities are signaled on start, but not on stop. That does not make much sense.
This blocks #21419 (closed)
Edited by Rémi Denis-Courmont
Player capabilities are signaled on start, but not on stop. That does not make much sense.
This blocks #21419 (closed)
VideoLAN code repository instance