input: update capabilities on end and error

When the input is stopped or an error occurred, the capabilities
should reflect that, so that on_capabilities_changed is invoked
as expected.

Fix #27047